[gd_scene load_steps=8 format=2]

[ext_resource path="res://Theme/default/theme.tres" type="Theme" id=1]
[ext_resource path="res://mocraClassic/notifications/background.png" type="Texture" id=2]
[ext_resource path="res://mocraClassic/notifications/friend/preset.gd" type="Script" id=3]
[ext_resource path="res://mocraClassic/notifications/friend/add.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "default"
tracks/0/type = "bezier"
tracks/0/path = NodePath("backgroundTexture:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("backgroundTexture:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("backgroundTexture:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("backgroundTexture:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[sub_resource type="Animation" id=3]
resource_name = "delete"
tracks/0/type = "bezier"
tracks/0/path = NodePath("backgroundTexture:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 500, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("backgroundTexture:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[sub_resource type="Animation" id=2]
resource_name = "display"
tracks/0/type = "bezier"
tracks/0/path = NodePath("backgroundTexture:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("backgroundTexture:rect_position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 500, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("backgroundTexture:rect_position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1420.0
margin_bottom = -880.0
rect_min_size = Vector2( 500, 200 )
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="backgroundTexture" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 500.0
margin_right = 1000.0
margin_bottom = 200.0
texture = ExtResource( 2 )

[node name="titleLabel" type="Label" parent="backgroundTexture"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -64.0001
margin_top = 11.0
margin_right = 462.0
margin_bottom = 96.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Friend request"

[node name="playerNameLabel" type="Label" parent="backgroundTexture"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -69.0001
margin_top = -22.0
margin_right = -29.0001
margin_bottom = 63.0

[node name="iconTexture" type="TextureRect" parent="backgroundTexture"]
margin_left = 25.0
margin_top = 25.0
margin_right = 175.0
margin_bottom = 175.0
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/default = SubResource( 1 )
anims/delete = SubResource( 3 )
anims/display = SubResource( 2 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
